samples/_failures_safe/1761210741_232019_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c839c354.c: In function ‘main’:
./samples/SAFE/__tmp_c839c354.c:190:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  190 |     int token
      |     ^~~
./samples/SAFE/__tmp_c839c354.c:190:5: error: expected declaration or statement at end of input
